# art-engine

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  xtask.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
crates/attractor/: Cargo.toml
crates/attractor/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: error.rs  main.rs
crates/core/: Cargo.toml
crates/core/proptest-regressions/: prng.txt
crates/core/src/: canvas.rs  color.rs  engine.rs  error.rs  field.rs  field_source.rs  lib.rs  palette.rs  params.rs  prng.rs  seed.rs
crates/core/src/render/: context.rs  fullscreen.rs  mod.rs  ping_pong.rs  shader.rs  target.rs  texture.rs
crates/dla/: Cargo.toml
crates/dla/src/: lib.rs
crates/engines/: Cargo.toml
crates/engines/src/: lib.rs  pixel.rs  snapshot.rs
crates/gray-scott/: Cargo.toml
crates/gray-scott/src/: lib.rs
crates/ising/: Cargo.toml
crates/ising/src/: lib.rs
crates/microbe/: Cargo.toml
crates/microbe/src/: lib.rs
crates/physarum/: Cargo.toml
crates/physarum/src/: lib.rs
crates/quantum/: Cargo.toml
crates/quantum/src/: lib.rs
crates/rose/: Cargo.toml
crates/rose/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
