[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/engines",
    "crates/wasm",
    "crates/cli",
    "crates/gray-scott",
    "crates/physarum",
    "crates/rose",
    "crates/microbe",
    "crates/quantum",
    "crates/ising",
    "crates/dla",
    "crates/attractor",
]
default-members = [
    "crates/core",
    "crates/engines",
    "crates/cli",
    "crates/gray-scott",
    "crates/physarum",
    "crates/rose",
    "crates/microbe",
    "crates/quantum",
    "crates/ising",
    "crates/dla",
    "crates/attractor",
]

[profile.release]
lto = true
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = "s"
