[package]
name = "art-engine-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the art-engine: Engine trait, Field, Palette, PRNG, Seed"

[features]
default = []
render = ["glow"]

[dependencies]
glam = "0.29"
glow = { version = "0.16", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noise = "=0.9.0"
thiserror = "2"

[dev-dependencies]
proptest = "1"
